# TradingAgents-CN

./: .gitignore  AGENTS.md  Gemini-API-服务介绍.md  README.md  SiliconFlow_完整英文文档.md
TradingAgents-CN/: .dockerignore  .env.example  .env.production.template  AGENTS.md  DOCKER_CONTROL_GUIDE.md  Dockerfile  Dockerfile.api  Dockerfile.production  FRONTEND_IMPROVEMENTS.md  FRONTEND_REFACTOR_GUIDE.md  MARKET_PRESET_FIX_GUIDE.md  QUICK_TEST_GUIDE.md  README.md  UI_FIX_TEST_GUIDE.md  VERSION  ai_integration_demo.py  check_gemini_docker.py  deploy-pipeline.sh  docker-compose.data-pipeline.yml  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.yml  docker_validation_results.json  key_backen.txt  main.py  main_multi_model.py  pyproject.toml  pytest.ini  requirements.txt  setup_gemini.sh  start_web.bat  start_web.ps1  start_web.py  start_web.sh  verify_scheduler_setup.py
TradingAgents-CN/.streamlit/: config.toml
TradingAgents-CN/cli/: __init__.py  main.py  models.py  utils.py
TradingAgents-CN/config/: README.md  agent_roles.yaml  charting_config.yaml  logging.toml  logging_docker.toml  model_roles.yaml  models.json  multi_model_config.yaml  pricing.json  role_library.json  settings.json  ui_role_overrides.json  usage.json
TradingAgents-CN/data/: multi_model_results_multi_model_05f592cc_20250814_235007.json  multi_model_results_multi_model_0a2e2a02_20250808_004102.json  multi_model_results_multi_model_12526d86_20250807_151029.json  multi_model_results_multi_model_12c1bbce_20250807_011251.json  multi_model_results_multi_model_1854fcfd_20250815_002710.json  multi_model_results_multi_model_18fb0f2f_20250807_005227.json  multi_model_results_multi_model_1fb23bc2_20250807_181906.json  multi_model_results_multi_model_24252280_20250814_212804.json  multi_model_results_multi_model_28b5d8c0_20250807_152454.json  multi_model_results_multi_model_2f4c44e5_20250812_170430.json  multi_model_results_multi_model_3162733c_20250807_230451.json  multi_model_results_multi_model_3a9da897_20250808_033028.json  multi_model_results_multi_model_42b4801c_20250807_180346.json  multi_model_results_multi_model_43a03aa7_20250815_004054.json  multi_model_results_multi_model_470a9caa_20250808_145915.json  multi_model_results_multi_model_4c33d9a4_20250810_002328.json  multi_model_results_multi_model_56354acd_20250807_212740.json  multi_model_results_multi_model_5897b3dc_20250812_152036.json  multi_model_results_multi_model_67379b59_20250808_001232.json  multi_model_results_multi_model_698e9cc2_20250807_144801.json  multi_model_results_multi_model_6f05fc3a_20250807_213038.json  multi_model_results_multi_model_731e533c_20250807_023014.json  multi_model_results_multi_model_78f3ae23_20250814_235800.json  multi_model_results_multi_model_86c1a411_20250807_023039.json  multi_model_results_multi_model_8a1f32c3_20250810_000851.json  multi_model_results_multi_model_8a9671eb_20250815_104516.json  multi_model_results_multi_model_8b4f25fb_20250809_181658.json  multi_model_results_multi_model_8cc63b43_20250807_014808.json  multi_model_results_multi_model_8ec57c28_20250807_193936.json  multi_model_results_multi_model_997175b6_20250807_175709.json  multi_model_results_multi_model_9e3226db_20250807_232838.json  multi_model_results_multi_model_9e8f44f3_20250815_012854.json  multi_model_results_multi_model_a5a849d0_20250812_173920.json  multi_model_results_multi_model_ae01951a_20250807_182214.json  multi_model_results_multi_model_ae29ccd2_20250807_152422.json  (+33 more)
TradingAgents-CN/docker/: alertmanager.yml  (+11 more)
(+763 files in other folders)
